✨ Feat: enhance doc